syntax = "proto3";
option java_multiple_files = true;
package com.mynotes.grpc.demo;

message CalculateRequest {
    int64 input= 1;
}

message CalculateResponse {
   int64 input= 1;
   int64 square= 2;
   double sqrt= 3;
}

service CalculateService {
    rpc squareAndRoot(CalculateRequest) returns (CalculateResponse);
    rpc squareAndRootStream(stream CalculateRequest) returns (stream CalculateResponse);
}